2000-01-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/mxverify-cgi.c, utils/Makefile.in:
	    Writing a utility to ease destination domain verification
	    by testing *all* MXes of given domain. WORK-IN-PROGRESS!

2000-01-17  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Accept SMTP verbs which have numbers in them.
	    Treat verb "550" by responding SILENTLY to it -- e.g.
	    don't reply anything when get it.

	* smtpserver/mxverify.c:
	    Treat RBL-type lookups as ERRORS only when the DNS
	    yields A record under mask: 127.0.0.0/24.  There exists
	    a zone:  .ok.orbs.org  which has  127.127.0.0/24 and
	    THOSE are verified to be ok.  If using ORBS, use first
	    the OK zone, only then the RELAYS zone.
	    ( -> On larger blocked zone, an individual OK entry can
	         accept email. )

2000-01-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/msgerror.c, include/ta.h, transports/libta/diagnostic.c,
	  transports/smtp/smtp.c:
	    Extend the notary report with "X-ZTAID:" which is diagnostic
	    about which TA process did generate the error report.
	    Allows one to hunt things from the syslog..

	* smtpserver/smtpserver.c:
	    Doing  longjmp()  from within a signal handler isn't
	    kosher -> sigsetjmp()/siglongjmp() and friends..
	    (Not that that signal handler should ever be called in
	     normal operation of the smtpserver..)

	* scheduler/readconfig.c:
	    Pulled back (disabled) code related to selector clause
	    wild-card testing in clause's "channel" part.

	* proto/cf/standard.cf:
	    Fixed recent thoughts mentioned below - coded test end
	    statement ("fi") was missing.

2000-01-07  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/threads.c:
	    Sometimes adding new tasks into a long-running thread did cause
	    the "unfed" count to go to *negative* value.  Now counting tasks
	    there always when they arrive to the thread, not only when all